<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        tools:context=".DetailFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/textViewDetailsFirstName"
            style="@style/NameTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_first_name" />

        <TextView
            android:id="@+id/textViewDetailsLastName"
            style="@style/NameTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_last_name" />

        <TextView
            android:id="@+id/textViewDetailsAge"
            style="@style/NameTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_age" />

    </LinearLayout>
</layout>